# drip-rs

./: .gitignore  Cargo.toml  README.md  build.rs  drip.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: min-version.yml  release.yml
src/: app.rs  drip.rs  main.rs  run.rs
tests/data/: fft.py  z-algorithm.cpp
