[package]
name = "drip-rs"
version = "1.0.0"
authors = ["Nullputra <stdnlptr@gmail.com>"]
edition = "2021"
license = "CC0-1.0"
autotests = false
readme = "README.md"
build = "build.rs"
description = "`drip-rs` executes code and runs tasks"
keywords = ["build", "task", "cli"]
categories = ["command-line-utilities"]
documentation = "https://github.com/nullputra/drip-rs"
homepage = "https://github.com/nullputra/drip-rs"
repository = "https://github.com/nullputra/drip-rs"

[[bin]]
name = "drip-rs"
path = "src/main.rs"

[build-dependencies]
anyhow = "1.0.60"
clap = { version = "3.2.17", features = ["derive"] }
clap_complete = "3.2.4"
version_check = "0.9.4"

[dependencies]
anyhow = "1.0.60"
clap = { version = "3.2.17", features = ["derive"] }
clap_complete = "3.2.4"
colored = "2.0.0"
ctrlc = "3.0.3"
question = "0.2.2"
serde = { version = "1.0.143", features = ["derive"] }
toml = "0.5.9"
